--- a/index.html
+++ b/index.html
@@ -25,27 +25,34 @@
 
     <!-- Section principale -->
     <main class="container">
-        <!-- Grille de cartes -->
-        <div class="card-grid">
-            <div class="service-card" data-coupon="Cryptonow">
-                <img src="images/image1.jpg" alt="Cryptonow">
-                <h3>Cryptonow</h3>
-                <p>Échange instantané</p>
+        <!-- Grille de cartes (4 images en 2 groupes de 2) -->
+        <div class="card-groups">
+            <!-- Premier groupe de 2 images -->
+            <div class="card-group">
+                <div class="service-card" data-coupon="Cryptonow">
+                    <img src="images/image1.jpg" alt="Cryptonow">
+                    <h3>Cryptonow</h3>
+                    <p>Échange instantané</p>
+                </div>
+                <div class="service-card" data-coupon="PCS">
+                    <img src="images/image2.jpg" alt="PCS">
+                    <h3>PCS</h3>
+                    <p>Recharge rapide</p>
+                </div>
             </div>
-            <div class="service-card" data-coupon="PCS">
-                <img src="images/image2.jpg" alt="PCS">
-                <h3>PCS</h3>
-                <p>Recharge rapide</p>
-            </div>
-            <div class="service-card" data-coupon="Paysafcard">
-                <img src="images/image5.jpg" alt="Paysafcard">
-                <h3>Paysafcard</h3>
-                <p>Sécurisé et fiable</p>
-            </div>
-            <div class="service-card" data-coupon="AppCard">
-                <img src="images/image7.jpg" alt="AppCard">
-                <h3>AppCard</h3>
-                <p>Facile à utiliser</p>
+
+            <!-- Deuxième groupe de 2 images -->
+            <div class="card-group">
+                <div class="service-card" data-coupon="Paysafcard">
+                    <img src="images/image5.jpg" alt="Paysafcard">
+                    <h3>Paysafcard</h3>
+                    <p>Sécurisé et fiable</p>
+                </div>
+                <div class="service-card" data-coupon="AppCard">
+                    <img src="images/image7.jpg" alt="AppCard">
+                    <h3>AppCard</h3>
+                    <p>Facile à utiliser</p>
+                </div>
             </div>
         </div>
 
